--- a/qsl.html
+++ b/qsl.html
@@ -49,10 +49,10 @@
       <small class="text-muted" lang="en">About us</small>
     </h2>
     <p lang="zh-Hans">
-      一位业余无线电新人，一位天真的工科学生，一个不太靠谱的程序员。
+      一位业余无线电新人，一位天真的工科学生，一个不太靠谱的程序员，一个 ACG 爱好者。
     </p>
     <p class="text-muted" lang="en">
-      A ham newbie, a naïve engineering student and a poor programmer.
+      A ham newbie, a naïve engineering student, a poor programmer, and a ACG lover.
     </p>
 
     <p lang="zh-Hans">可以使用汉语（普通话或福州话）、英语和日语交流。<span lang="zh-Hant">如您使用繁體字，請勿用自動翻譯程式書寫，以免影響閲讀。</span></p>
@@ -75,7 +75,7 @@
       The following is the QSL card style in use. Exchanges of QSL card (either paper, E-mail or eQSL) are welcomed, in any mode including FT8 or through FM repeaters.
       <ul class="text-muted">
         <li>Paper cards via direct: Post mails and parcels are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> addressed below. Once received I will reply within 1~2 months. No cash, stamp or IRC required. I'm happy collecting stamps and postmarks, and incoming mails will be carefully scanned and stored.</li>
-        <li>Via bureau: The BY bureau only distributes cards once a year, so exchanging cards via BURO may take several years. Better e-mail me first if you would like to exchange.</li>
+        <li>Via bureau: The BY bureau only distributes cards once a year and tons of cards seem to be lost these years. Exchanging cards via BURO could be VERY UNRELIABLE. Better e-mail me first if you would like to exchange.</li>
         <li>E-mail: bi1mhk*outlook.com (Replace * with @)</li>
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services are online and when I have Internet access, same below)</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>: Upload once a week or more. Custom style available.</li>
@@ -87,7 +87,7 @@
       以下は使っているQSLカードのスタイルです。電子カードや紙カード・記念カードの交換を歓迎します！デジタルモード・FMリピーターでも構いません！
       <ul class="text-muted">
         <li><ruby>直接郵送<rt>Direct</rt></ruby>：郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。宛先は下にご参照ください。返信は状況に応じて 1~2ヶ月後になります。現金・切手・<ruby>国際返信切手券<rt>International Reply Coupon</rt></ruby>など必要ありません。消印などを収集しているので、珍しい消印を歓迎します。受け取った郵便物や切手は丁寧にスキャンされ、保存されます。</li>
-        <li>ビューロー：BY ビューローは年一回しか出荷しておらず、ビューローでカード交換には数年掛かる可能性があります。ご理解ありがとうございます。</li>
+        <li>ビューロー：近年 BY ビューローはほぼ使わない状態でした。年一回しか出荷しておらず、紛失（特にアジアからの）など様々な状況が発生したため、ビューローでのカード交換には極めて不安定です。もしよろしければ直接郵送での交換をお勧めします。ご理解ありがとうございます。</li>
         <li>E-mail: bi1mhk*outlook.com (* を @ へ)</li>
         <li>LoTW、<a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>、<a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>、<a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：週に一回更新します。カスタムカードスタイルはあります。</li>
@@ -140,7 +140,7 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
         <div class="col">
           <div class="card h-100">
-            <img src="images\award2.webp" class="card-img-top" alt="certificate of CARFA 2024">
+            <img src="images/award2.webp" class="card-img-top" alt="certificate of CARFA 2024">
             <div class="card-body">
               <h5 class="card-title">May 5th Chinese Radio Amateurs Festival's Activity</h5>
               <p class="card-text" lang="zh-Hans">“5.5 中国业余无线电节”纪念通联活动</p>
@@ -152,7 +152,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="images\award201.jpg" class="card-img-top" alt="certificate of Memorial Victory 79">
+            <img src="images/award201.jpg" class="card-img-top" alt="certificate of Memorial Victory 79">
             <div class="card-body">
               <h5 class="card-title">Memorial Victory 79</h5>
               <p class="card-text" lang="ru">В ознаменование 79-летия Победы над нацизмом, отдавая дань памяти тем, кто защищал нашу Родину на фронтах Великой Отечественной войны и тем, кто ковал нашу Победу в тылу, в знак глубокого уважения и благодарности за их вклад в Победу над нацизмом, принимая во внимание всемирно-историческое значение Победы над нацизмом в Великой Отечественной войне, Союз радиолюбителей России при поддержке Автономной некоммерческой организации Редакция журнала «Радио» проводит в мае 2024 года Мемориал «Победа-79».</p>
@@ -163,7 +163,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="images\award1.jpg" class="card-img-top" alt="">
+            <img src="images/award1.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">World Amateur Radio Day</h5>
               <p class="card-text" lang="en">RAAG celebrates the World Amateur Radio Day by activating a Special Event Station with the Special Call Sign <code>SZ0WARD</code> for the time period April 15th to April 30th 2024.</p>
