--- a/qsl.html
+++ b/qsl.html
@@ -52,7 +52,7 @@
       一位业余无线电新人，一位天真的工科学生，一个不太靠谱的程序员，一个 ACG 爱好者。
     </p>
     <p class="text-muted" lang="en">
-      A ham newbie, a naïve engineering student, a poor programmer, and a ACG lover.
+      A ham newbie, a naïve engineering student, a poor programmer, and an ACG lover.
     </p>
 
     <p lang="zh-Hans">可以使用汉语（普通话或福州话）、英语和日语交流。<span lang="zh-Hant">如您使用繁體字，請勿用自動翻譯程式書寫，以免影響閲讀。</span></p>
